# Text2SQL

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 55d1f435112b_initial_migration.py  9467fdbb11d6_initial_migration.py  f6297729fa99_add_user_databases_and_update_users.py
backend/: config.py  database.py  main.py  models.py  schemas.py  text2sql.py  utils.py
backend/routers/: databases.py  query.py
frontend/: App.py  Home.py  Login.py  SqlQuery.py  app.py
